# cloudhand-deploy

./: README.md
cloudhand-api/: .env.example  .gitignore  alembic.ini  cleanup_orphans.py  debug_db.py  pyproject.toml  test_app_query.py
cloudhand-api/alembic/: env.py
cloudhand-api/alembic/versions/: 001_add_operations_and_sessions.py  416d0f57cd0c_add_user_id_to_agent_sessions.py  908f09b25895_revert_to_local_auth.py  d4480b26d881_initial_migration.py
cloudhand-api/src/: inspect_app_db.py  main.py  migrate_db.py  schemas.py
cloudhand-api/src/database/: __init__.py  connection.py  models.py
cloudhand-api/src/routers/: agent_sessions.py  applications.py  auth.py  chat.py  deps.py  github.py  onboarding.py  operations.py  projects.py  resources.py  secrets.py  tasks.py
cloudhand-api/src/services/: __init__.py  agent.py  deployment.py  github.py  onboarding.py  sandbox.py  secrets.py
deploy/: docker-compose.yml
deploy/examples/: plan-single-workload.json  plan-two-workloads-same-server.json  workload-patch.json
deploy/nginx/: cloudhand-api.conf
deploy/scripts/: install-docker-clean-ubuntu.sh  install-docker-compose-ubuntu22.sh  setup_control_server.sh
deploy/systemd/: cloudhand-api.service
src/cloudhand/: __init__.py  cli.py  models.py  secrets.py  terraform_gen.py  worker.py
src/cloudhand/adapters/: __init__.py  deployer.py  vault.py
src/cloudhand/core/: apply.py  config.py  diagram.py  init.py  paths.py  plan.py  scan.py  spec.py  terraform.py
